--- a/task2/style.css
+++ b/task2/style.css
@@ -6,7 +6,7 @@
   background-image: linear-gradient(to bottom, black,gray );
 }
 
-.progress {
+.indicator__progress {
   width: 90%;
   height: 18px;
   background-image: linear-gradient(to bottom, rgba(28, 28, 223, 0.678), rgba(28, 28, 223, 0.678) 40%, blue );
