--- a/task2/style.css
+++ b/task2/style.css
@@ -9,9 +9,9 @@
 .indicator__progress {
   width: 90%;
   height: 18px;
-  background-image: linear-gradient(to bottom, rgba(28, 28, 223, 0.678), rgba(28, 28, 223, 0.678) 40%, blue );
+  background-image:linear-gradient(180deg, rgba(105,185,244,1) 0%, rgba(57,144,234,1) 56%, rgba(108,190,245,1) 100%);
   border-radius: 10px 0 0 10px;
-  border: 1px blue solid;
+  border: 1px #358be9 solid;
   box-shadow: 2px 0px 2px;
 
 }
