--- a/task4/style.css
+++ b/task4/style.css
@@ -1,43 +1,59 @@
-.wrapper {
-  height: 100vh;
+.weather {
+  height: 70px;
   width: 100vw;
   display: flex;
   justify-content: center;
-}
-
-.block {
-  height: 30%;
-  width: 20%;
-  background-color: beige;
-  border: 1px solid white;
-  text-align: center;
   
 }
 
-.block__header {
-  height: 20%;
+.weather__block {
+  height: 100%;
+  width: 30%;
+  text-align: center;
+  z-index: 3;
+  margin: 1px;
+}
+
+.weather__block:hover {
+  box-shadow: 0px 3px 3px darkgrey;
+}
+
+.weather__header {
+  height: 25%;
   width: 100%;
   background-color: darkcyan;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.block__img {
-  height: 40%;
-  width: 40%;
-  background-color: brown;
-}
-
-.block__text-header {
+.weather__text-header {
   color: white;
-  font-size: 40%;
+  font-size: 80%;
 }
 
-.degrees {
+.weather__img-wrapper {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.weather__degrees-wrapper {
+  height: 25%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.weather__degrees {
   color: black;
-  font-size: 50%;
+  font-size: 25%;
 }
 
-img {
-  height: 20px;
-  width: 20px;
+.weather__img {
+  height: 80%;
 }
